# Rust_Crypto

./: test.txt
file_encryptor/: Cargo.toml
file_encryptor/src/: backup.rs  main.rs
