[package]
name = "file_encryptor"
version = "0.1.0"
edition = "2021"

platform = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.5"


[target.'cfg(target_arch = "x86_64")']
